chore: allow running test manually
Signed-off-by: Stefan Pfaffel <s.pfaffel@gmail.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,6 +9,7 @@ concurrency:
 on:
   pull_request:
   push:
+  workflow_dispatch:
 
 # Testing only needs permissions to read the repository contents.
 permissions:
