chore: allow also file system read
because this test fails on github actions

Signed-off-by: Stefan Pfaffel <s.pfaffel@gmail.com>

--- a/test-e2e/network/server/go-with-log-match-trigger/tests.yml
+++ b/test-e2e/network/server/go-with-log-match-trigger/tests.yml
@@ -11,6 +11,7 @@
   configure_gatekeeper_entrypoint: false
   expect_failure: false
   permissions:
+    - --allow-file-system-read
     - --allow-network-server
 - describe: go server triggered by log matching with read filesystem permissions fails
   configure_gatekeeper_entrypoint: false
