--- a/test-e2e/network/server/nginx/tests.yml
+++ b/test-e2e/network/server/nginx/tests.yml
@@ -11,6 +11,7 @@
     - --allow-timers-and-clocks-management
     - --allow-file-system-permissions
     - --allow-process-communication
+    - --allow-local-sockets
     - --allow-network-client
 - describe: nginx server with network server permissions succeeds
   configure_gatekeeper_entrypoint: false
@@ -21,6 +22,7 @@
     - --allow-timers-and-clocks-management
     - --allow-file-system-permissions
     - --allow-process-communication
+    - --allow-local-sockets
     - --allow-network-server
 - describe: nginx server with read filesystem permissions fails
   configure_gatekeeper_entrypoint: false
