tests: update tests and add more tests
Signed-off-by: Stefan Pfaffel <s.pfaffel@gmail.com>

--- a/test-e2e/network/client/socat/Dockerfile
+++ b/test-e2e/network/client/socat/Dockerfile
@@ -8,4 +8,4 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/*
 
 # Use IPv4 address to avoid DNS; timeout to fail fast on denied connects
-CMD ["bash", "-lc", "printf 'GET / HTTP/1.0\r\n\r\n' | socat - TCP:1.1.1.1:80,connect-timeout=3 | sed -n '1p'"]
+CMD ["socat", "-", "TCP4:www.example.com:80,keepidle=10,connect-timeout=3"]
