--- a/test-e2e/network/client/dig/tests.yml
+++ b/test-e2e/network/client/dig/tests.yml
@@ -10,6 +10,7 @@
   expect_failure: true
   permissions:
     - --allow-network-server
+    - --allow-file-system-write
 - describe: dig with read filesystem permissions fails
   expect_failure: true
   permissions:
