--- a/test-e2e/network/client/httpie/tests.yml
+++ b/test-e2e/network/client/httpie/tests.yml
@@ -6,10 +6,13 @@
   permissions:
     - --allow-network-client
     - --allow-file-system-read
+    - --allow-local-sockets
 - describe: httpie with network server permissions fails
   expect_failure: true
   permissions:
     - --allow-network-server
+    - --allow-file-system-read
+    - --allow-local-sockets
 - describe: httpie with read filesystem permissions fails
   expect_failure: true
   permissions:
