refactor: rename permission and cli flag names
Signed-off-by: Stefan Pfaffel <s.pfaffel@gmail.com>

--- a/test-e2e/filesystem/read/ls/tests.yml
+++ b/test-e2e/filesystem/read/ls/tests.yml
@@ -12,10 +12,10 @@
 - describe: ls directory listing with read-only filesystem permissions succeeds
   expect_failure: false
   permissions:
-    - --allow-local-sockets
+    - --allow-network-local-sockets
     - --allow-file-system-read
 - describe: ls directory listing with write-only filesystem permissions succeeds
   expect_failure: false
   permissions:
-    - --allow-local-sockets
+    - --allow-network-local-sockets
     - --allow-file-system-write
