--- a/test-e2e/network/client/socat/tests.yml
+++ b/test-e2e/network/client/socat/tests.yml
@@ -6,14 +6,14 @@
   permissions:
     - --allow-network-client
     - --allow-file-system-read
-    - --allow-local-sockets
+    - --allow-network-local-sockets
     - --allow-process-communication
 - describe: socat with network server permissions fails
   expect_failure: true
   permissions:
     - --allow-network-server
     - --allow-file-system-read
-    - --allow-local-sockets
+    - --allow-network-local-sockets
     - --allow-process-communication
 - describe: socat with read filesystem permissions fails
   expect_failure: true
