--- a/test-e2e/process-management/gates-apply-to-all-child-processes/tests.yml
+++ b/test-e2e/process-management/gates-apply-to-all-child-processes/tests.yml
@@ -13,10 +13,10 @@
   expect_failure: true
   permissions:
     - --allow-file-system-read
-    - --allow-local-sockets
+    - --allow-network-local-sockets
 - describe: starting a child process with write filesystem permissions succeeds
   expect_failure: false
   permissions:
     - --allow-file-system-write
     - --allow-process-communication
-    - --allow-local-sockets
+    - --allow-network-local-sockets
