feat: handle more syscalls and check more syscall args
Signed-off-by: Stefan Pfaffel <s.pfaffel@gmail.com>

--- a/test-e2e/filesystem/write/mv/tests.yml
+++ b/test-e2e/filesystem/write/mv/tests.yml
@@ -17,3 +17,16 @@
   expect_failure: false
   permissions:
     - --allow-file-system-write
+- describe: mv with filesystem permissions on /var fails
+  expect_failure: true
+  permissions:
+    - --allow-file-system-write
+    - --allow-file-system-path=/var
+    - --allow-file-system-path=/lib/x86_64-linux-gnu
+- describe: mv with filesystem permissions on /etc succeeds
+  expect_failure: false
+  permissions:
+    - --allow-file-system-write
+    - --allow-file-system-path=/etc
+    - --allow-file-system-path=/proc/filesystems
+    - --allow-file-system-path=/lib/x86_64-linux-gnu
