--- a/test-e2e/filesystem/write/touch/Dockerfile
+++ b/test-e2e/filesystem/write/touch/Dockerfile
@@ -3,4 +3,4 @@ FROM debian:stable-slim
 COPY gatekeeper /gatekeeper
 RUN chmod +x /gatekeeper
 
-CMD ["mv", "/etc/os-release", "/etc/os-release.copy"]
+CMD ["touch", "/etc/mytestfile"]
