--- a/test-e2e/filesystem/write/mkdir/tests.yml
+++ b/test-e2e/filesystem/write/mkdir/tests.yml
@@ -17,3 +17,19 @@
   expect_failure: false
   permissions:
     - --allow-file-system-write
+- describe: mkdir with filesystem permissions on /var fails
+  expect_failure: true
+  permissions:
+    - --allow-file-system-write
+    - --allow-file-system-path=/etc
+    - --allow-file-system-path=/lib/x86_64-linux-gnu
+    - --allow-file-system-path=/proc/filesystems
+    - --allow-file-system-path=/var
+- describe: mkdir with filesystem permissions on /tmp succeeds
+  expect_failure: false
+  permissions:
+    - --allow-file-system-write
+    - --allow-file-system-path=/etc
+    - --allow-file-system-path=/lib/x86_64-linux-gnu
+    - --allow-file-system-path=/tmp
+    - --allow-file-system-path=/proc/filesystems
