--- a/test-e2e/filesystem/write/mv/Dockerfile
+++ b/test-e2e/filesystem/write/mv/Dockerfile
@@ -3,4 +3,4 @@ FROM debian:stable-slim
 COPY gatekeeper /gatekeeper
 RUN chmod +x /gatekeeper
 
-CMD ["touch", "/tmp/new-file"]
+CMD ["mv", "/etc/os-release", "/etc/os-release.copy"]
