tests: update permissions
Signed-off-by: Stefan Pfaffel <s.pfaffel@gmail.com>

--- a/test-e2e/filesystem/write/rmdir/tests.yml
+++ b/test-e2e/filesystem/write/rmdir/tests.yml
@@ -21,13 +21,13 @@
   expect_failure: true
   permissions:
     - --allow-file-system-write
-    - --allow-file-system-path=/etc/ld.so.cache
+    - --allow-file-system-path=/etc
     - --allow-file-system-path=/lib/x86_64-linux-gnu
     - --allow-file-system-path=/var
 - describe: rmdir with filesystem permissions on /tmp succeeds
   expect_failure: false
   permissions:
     - --allow-file-system-write
-    - --allow-file-system-path=/etc/ld.so.cache
+    - --allow-file-system-path=/etc
     - --allow-file-system-path=/lib/x86_64-linux-gnu
     - --allow-file-system-path=/tmp
