--- a/test-e2e/filesystem/write/symlink/tests.yml
+++ b/test-e2e/filesystem/write/symlink/tests.yml
@@ -22,12 +22,13 @@
   permissions:
     - --allow-file-system-write
     - --allow-file-system-path=/var
-    - --allow-file-system-path=/etc/ld.so.cache
+    - --allow-file-system-path=/etc
     - --allow-file-system-path=/lib/x86_64-linux-gnu
 - describe: symlink with filesystem permissions on /tmp succeeds
   expect_failure: false
   permissions:
     - --allow-file-system-write
     - --allow-file-system-path=/tmp
-    - --allow-file-system-path=/etc/ld.so.cache
+    - --allow-file-system-path=/etc
+    - --allow-file-system-path=/etc
     - --allow-file-system-path=/lib/x86_64-linux-gnu
