--- a/test-e2e/filesystem/write/unlink/tests.yml
+++ b/test-e2e/filesystem/write/unlink/tests.yml
@@ -28,6 +28,7 @@
   expect_failure: false
   permissions:
     - --allow-file-system-write
+    - --allow-file-system-path=/etc
     - --allow-file-system-path=/etc/ld.so.cache
     - --allow-file-system-path=/lib/x86_64-linux-gnu
     - --allow-file-system-path=/tmp
