feat: pass std to tracee
Signed-off-by: Stefan Pfaffel <s.pfaffel@gmail.com>

--- a/test-e2e/filesystem/write/append-tee/Dockerfile
+++ b/test-e2e/filesystem/write/append-tee/Dockerfile
@@ -2,8 +2,12 @@ FROM debian:stable-slim
 
 COPY gatekeeper /gatekeeper
 RUN chmod +x /gatekeeper
+
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
 # Prepare target file to append to
 RUN sh -lc "echo base > /tmp/append-target"
 
-# Append via tee -a; exit 0 on success
-CMD ["/bin/sh", "-lc", "echo more | tee -a /tmp/append-target > /dev/null"]
+ENTRYPOINT ["bash"]
+CMD ["/entrypoint.sh"]
