--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: googleapis/release-please-action@v4
+        id: release
         with:
           # this is a built-in strategy in release-please, see "Action Inputs"
           # for more options
           release-type: go
+
+      - name: build binaries
+        if: ${{ steps.release.outputs.release_created }}
+        run: |
+          ./build.sh
+          mv cuandari "${{ env.RELEASE_NAME }}"-linux-x64
+          sha256sum "${{ env.RELEASE_NAME }}"-linux-x64 >> sha256sums.txt
+
+      - name: upload release assets
+        if: ${{ steps.release.outputs.release_created }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release upload ${{ steps.release.outputs.tag_name }} "${{ env.RELEASE_NAME }}"-linux-x64 sha256sums.txt
