--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v6
       - uses: actions/setup-go@v6
         with:
-          go-version-file: 'go.mod'
+          go-version-file: "go.mod"
           cache: true
       - run: sudo apt-get install -y libseccomp-dev pkg-config
       - run: go mod download
@@ -29,3 +29,14 @@ jobs:
         uses: golangci/golangci-lint-action@v9
         with:
           version: latest
+
+  dockerfile:
+    name: dockerfile
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - uses: actions/checkout@v6
+      - uses: hadolint/hadolint-action@v3.3.0
+        with:
+          dockerfile: Dockerfile
+          ignore: DL3003,DL3006,DL3007,DL3008
